Aggiornamento workflow alert e routine ambientale (D16, D17)
